--- a/src/main.styl
+++ b/src/main.styl
@@ -1,19 +1,15 @@
 @import 'styles/_vars'
 @import 'styles/*'
 
+// global important styles //
 
 html 
   box-sizing border-box
-
+  
 *, *:before, *:after
   box-sizing inherit
 
-
-.hi
-  border 17px green solid
-
 body 
-  color $g2
-  background $g7
   margin 0
-
+  padding 0
+  background $g4
