--- a/src/styles/_buttons.styl
+++ b/src/styles/_buttons.styl
@@ -17,4 +17,33 @@ button:hover
 
 button
   .highlight
-    border 2px solid green 
+    border 2px solid green
+
+
+
+.greenflashborder
+    border 2px solid yellow
+    animation flash linear 2s infinite
+
+
+/* Flash class and keyframe animation */
+.flashit
+    color $green
+    animation flash linear 2s infinite
+    font-size 24px
+    // border 1px solid $green
+
+.throbber
+    border 2px solid $green
+    animation throb linear 2s infinite
+    
+
+@keyframes flash
+    0% { opacity: 1; } 
+    50% { opacity: .2 } 
+    100% { opacity: 1; }
+
+@keyframes throb
+    0% { border-color: $green } 
+    50% { border-color: $blue } 
+    100% { border-color: $green }
