--- a/src/styles/_typog.styl
+++ b/src/styles/_typog.styl
@@ -1,10 +1,20 @@
-body 
-  color black
+html
+  font-size 18px
+  font-family Verdana, Geneva, Tahoma, sans-serif
+  color #111
 
-h1 
-  color black
+h1
+  font-size 2.5rem
+  // padding 0
+  margin .75rem 0
 
-p
-  color black
-
-
+a
+  color $ga
+  text-decoration-line none
+  font-size 1.2rem
+  // width 150px
+  background $blue
+  // padding .5em
+  margin 1rem 0
+  border-radius 5px
+  // text-align center
