--- a/src/styles/_typog.styl
+++ b/src/styles/_typog.styl
@@ -9,7 +9,7 @@ h1
   margin .75rem 0
 
 a
-  color $ga
+  color $g8
   text-decoration-line none
   font-size 1.2rem
   // width 150px
@@ -17,4 +17,5 @@ a
   // padding .5em
   margin 1rem 0
   border-radius 5px
+  outline none
   // text-align center
