--- a/src/styles/_vars.styl
+++ b/src/styles/_vars.styl
@@ -1,5 +1,5 @@
 $green= #0a0
-$blue = #36b
+$oldblue = #36b
 $lightblue = #47c
 
 $gd = #def
@@ -16,3 +16,14 @@ $g3 = #345
 $g2 = #234
 $g1 = #123
 $g0 = #012
+
+$blue = #3c476b 
+$blue = #444477
+$blue = #334477
+$blue = #444477
+$blue = #223377
+$blue = #112277
+$blue = #11227777
+$blue = #556699
+$blue = #3333bb
+$blue = #445599
