--- a/src/main.styl
+++ b/src/main.styl
@@ -1,4 +1,5 @@
 @import 'styles/_vars'
+@import 'styles/_mixins'
 @import 'styles/*'
 
 // global important styles //
@@ -13,3 +14,37 @@ body
   margin 0
   padding 0
   background $g4
+
+
+
+
+
+/* Flash class and keyframe animation */
+.flash
+  // color $green
+  animation flash linear 2s infinite
+  // font-size 24px
+  // border 1px solid $green
+
+.throb
+  // border 2px solid green
+  animation throb linear 2s infinite
+    
+
+@keyframes flash
+  0% { opacity: 1; } 
+  50% { opacity: .2 } 
+  100% { opacity: 1; }
+
+@keyframes throb
+  0% { border-color: green } 
+  50% { border-color: blue } 
+  100% { border-color: green }
+
+a  
+  color $g9
+  background blue
+  padding 0.5rem 1rem
+  display inline-block
+  min-width 140px
+  link(0.5rem)
