--- a/src/styles/_vars.styl
+++ b/src/styles/_vars.styl
@@ -1,6 +1,17 @@
+$buttonColour = blue
+// $buttonColour = green
+
+
+$trans = transparent
+
+
 $green= #0a0
 $oldblue = #36b
 $lightblue = #47c
+
+// could overwrite default colors,
+// eg. blue = #24b
+
 
 $gd = #def
 $gc = #cde
@@ -16,14 +27,33 @@ $g3 = #345
 $g2 = #234
 $g1 = #123
 $g0 = #012
+// 
 
-$blue = #3c476b 
-$blue = #444477
-$blue = #334477
-$blue = #444477
-$blue = #223377
-$blue = #112277
-$blue = #11227777
-$blue = #556699
-$blue = #3333bb
-$blue = #445599
+
+darkblue = #038
+blue = #115588
+blue = #259
+lightblue = #269
+// blue = #05a
+// lightblue = #
+
+green = #474
+
+
+
+navy = #001F3F
+// blue = #0074D9
+aqua = #7FDBFF
+teal = #39CCCC
+olive = #3D9970
+lime = #01FF70
+yellow = #FFDC00
+orange = #FF851B
+red = #FF4136
+fuchsia = #F012BE
+purple = #B10DC9
+maroon = #85144B
+white = #FFFFFF
+silver = #DDDDDD
+gray = #AAAAAA
+black = #111111
