--- a/src/styles/_typog.styl
+++ b/src/styles/_typog.styl
@@ -1,7 +1,7 @@
 html
-  font-size 18px
-  font-family Verdana, Geneva, Tahoma, sans-serif
   color #111
+  font-size 1.2em
+  font-family Ubuntu, Helvetica, Arial, sans-serif
 
 h1
   font-size 2.5rem
@@ -12,10 +12,4 @@ a
   color $g8
   text-decoration-line none
   font-size 1.2rem
-  // width 150px
-  background $blue
-  // padding .5em
-  margin 1rem 0
-  border-radius 5px
   outline none
-  // text-align center
