--- a/src/main.styl
+++ b/src/main.styl
@@ -2,23 +2,6 @@
 @import 'styles/_mixins'
 @import 'styles/*'
 
-// global important styles //
-
-html 
-  box-sizing border-box
-  
-*, *:before, *:after
-  box-sizing inherit
-
-body 
-  margin 0
-  padding 0
-  background $g4
-
-
-
-
-
 /* Flash class and keyframe animation */
 .flash
   // color $green
@@ -44,7 +27,8 @@ body
 a  
   color $g9
   background blue
-  padding 0.5rem 1rem
+  padding 0.2rem 0.2rem
   display inline-block
   min-width 140px
+  text-align center
   link(0.5rem)
