--- a/src/styles/_stuff.styl
+++ b/src/styles/_stuff.styl
@@ -1,71 +1,50 @@
-.tooltip                // same
+// tooltip container
+.tooltip
   position relative
   display inline-block
-//
+  cursor pointer
 
-.tooltip .tooltiptext 
-  opacity 0
-  width 200px
-  background-color $g9
-  color darkblue
-  text-align center
-  padding 0.33rem 0
-  border-radius 5px
-  position absolute
-  top 0.4rem            // aha
-  left 2.5rem
-  z-index 1
-//
+// tooltip text
+.tooltiptext
+    visibility hidden
+    width 300px
+    background-color $g9
+    color $g0
+    text-align center
+    padding 5px 0
+    border-radius 6px
 
-.tooltip:hover .tooltiptext 
-  opacity 0.75
-  transition 1.5s all
-//
+    /* Position the tooltip text */
+    position absolute
+    z-index 1
 
-.tooltip .tooltiptext::after 
+    /* Fade in tooltip */
+    opacity 0
+    transition opacity 1s
+
+
+/* Position the tooltip text */
+.tooltip .tooltip-right
+    // top 10%
+    left 133%
+
+.tooltip-left
+  right 100%
+
+
+/* Tooltip arrow */
+.tooltip .tooltiptext::after
     content " "
     position absolute
-    top 50%
-    right 100% // aha
-    // left 0%
-    margin-top -5px
+    top 35%
+    right 100%
+    margin-left -5px
     border-width 5px
     border-style solid
-    border-color $trans $g9 $trans $trans // aha
-//
-///////////////////
+    border-color transparent orange transparent transparent
 
 
-.tooltip2                // same
-  position relative
-  display inline-block
-
-
-.tooltip2 .tooltiptext2 
-  opacity 0
-  width 200px
-  background-color $g9
-  color darkblue
-  text-align center
-  padding 0.33rem 0
-  border-radius 5px
-  position absolute
-  // top 0.4rem            // aha
-  right 2.5rem
-  z-index 1
-
-
-.tooltip2:hover .tooltiptext2 
-  opacity 0.75
-  transition 1.5s all
-
-
-.tooltip2 .tooltiptext2::after 
-    content " "
-    position absolute
-    top 50%
-    left 100% // to left of tooltip
-    margin-top -5px
-    border-width 5px
-    border-style solid
-    border-color $trans $trans $trans $g9
+/* Show the tooltip text when you mouse over the tooltip container */
+.tooltip:hover .tooltiptext
+    visibility visible
+    opacity 0.8
