--- a/src/styles/_vars.styl
+++ b/src/styles/_vars.styl
@@ -1,17 +1,7 @@
 $buttonColour = blue
 // $buttonColour = green
 
-
 $trans = transparent
-
-
-$green= #0a0
-$oldblue = #36b
-$lightblue = #47c
-
-// could overwrite default colors,
-// eg. blue = #24b
-
 
 $gd = #def
 $gc = #cde
@@ -31,27 +21,22 @@ $g0 = #012
 
 
 darkblue = #038
-blue = #115588
 blue = #259
-lightblue = #269
+lightblue = #36c
+navy = #024
+purple = #529
+aqua = #08a
 
 green = #474
+lime = #780
+olive = #663
 
+red = #710 
+maroon = #700
+orange = #a40
+yellow = #b80 
 
-
-navy = #001F3F
-// blue = #0074D9
-aqua = #7FDBFF
-teal = #39CCCC
-olive = #3D9970
-lime = #01FF70
-yellow = #FFDC00
-orange = #FF851B
-red = #FF4136
-fuchsia = #F012BE
-purple = #B10DC9
-maroon = #85144B
-white = #FFFFFF
-silver = #DDDDDD
-gray = #AAAAAA
-black = #111111
+black = #111
+gray = #777
+white = #ccc
+teal = #087
