--- a/src/styles/_tooltip.styl
+++ b/src/styles/_tooltip.styl
@@ -3,23 +3,23 @@ $fg = $g0
 
 // tooltip container
 .tooltip
+  cursor pointer
   position relative
   display inline-block
-  cursor pointer
 
 // tooltip text
 .tooltiptext
-	// visibility hidden
-	width 300px
-	background-color $bg
 	color $fg
-	text-align center
+	width 300px
 	padding 5px 0
+	visibility hidden
+	text-align center
 	border-radius 6px
+	background-color $bg
 
 	/* Position the tooltip text */
-	position absolute
 	z-index 1
+	position absolute
 
 	/* Fade in tooltip */
 	opacity 0
@@ -36,10 +36,10 @@ $fg = $g0
 
 /* Tooltip arrow */
 .tooltiptext::after
-	content " "
-	position absolute
 	top 35%
+	content " "
 	border-width 5px
+	position absolute
 	border-style solid
 
 .tooltip-right.tooltiptext::after 
@@ -56,4 +56,5 @@ $fg = $g0
 
 /* Show the tooltip text when you mouse over the tooltip container */
 .tooltip:hover .tooltiptext
-  opacity 0.8
+	opacity 0.8
+	visibility visible
