--- a/src/main.styl
+++ b/src/main.styl
@@ -9,16 +9,23 @@ html
 
 h1
   font-size 2.5rem
+  font-family Merriweather
+  
   // padding 0
   // margin .75rem 0
 
 a
-  color $g8
+  // color $g8
   text-decoration-line none
   font-size 1.2rem
   outline none
-
-
+  color $g9
+  background $g3
+  padding 0.2rem 0.2rem
+  display inline-block
+  min-width 140px
+  text-align center
+  link(0.5rem)
 
 
 /* Flash class and keyframe animation */
@@ -43,11 +50,5 @@ a
   50% { border-color: blue } 
   100% { border-color: green }
 
-a  
-  color $g9
-  background blue
-  padding 0.2rem 0.2rem
-  display inline-block
-  min-width 140px
-  text-align center
-  link(0.5rem)
+
+// button
