creeping towards dS

--- a/src/components/data-sources/csv/inputs.styl
+++ b/src/components/data-sources/csv/inputs.styl
@@ -9,10 +9,8 @@ legend
   background $g5
   border-radius 5px
   font-size 1.15rem
-
-legend.title 
-  font-size 1.5rem
-//
+  &.title 
+    font-size 1.5rem
 
 .list
   background $blue
@@ -36,9 +34,8 @@ input
   height 1.25rem
   width 1.25rem
   background-color $g3
-
-.radio
-  border-radius 50%
+  &.radio
+    border-radius 50%
 
 label:hover input ~ .checkmark
   background-color #47c
