--- a/src/main.styl
+++ b/src/main.styl
@@ -11,8 +11,15 @@ h1
   font-size 2.5rem
   font-family Merriweather
   margin-top 0.5rem
+  color #111
+  
   // padding 0
   // margin .75rem 0
+
+p
+  color #111
+  
+
 
 a
   // color $g8
