--- a/src/main.styl
+++ b/src/main.styl
@@ -24,6 +24,25 @@ a
   padding 0.2rem 0.2rem
   text-decoration-line none
 
+button
+  font-size 1.25rem
+  color $g8
+  background blue
+  padding 0.75rem
+  border-radius 0.5rem
+  border 2px solid lime
+  transition 0.5s all ease
+  animation throb linear 2s infinite
+  &:hover
+    cursor pointer
+    background lightblue
+
+
+#text 
+  background $g6
+  padding 1rem
+  width 600px
+
 
 //  ---  animations   ---
 //
@@ -43,3 +62,4 @@ a
   0% { border-color: green } 
   50% { border-color: blue } 
   100% { border-color: green }
+
