--- a/src/main.styl
+++ b/src/main.styl
@@ -30,9 +30,10 @@ button
   background blue
   padding 0.75rem
   border-radius 0.5rem
-  border 2px solid lime
+  border 0
+  // border 2px solid lime
   transition 0.5s all ease
-  animation throb linear 2s infinite
+  // animation throb linear 2s infinite
   &:hover
     cursor pointer
     background lightblue
@@ -42,6 +43,12 @@ button
   background $g7
   padding 1rem
   width 600px
+
+
+.spacer 
+  width 50px
+  display inline-block
+  text-align center
 
 
 //  ---  animations   ---
