--- a/src/main.styl
+++ b/src/main.styl
@@ -3,6 +3,10 @@
 @import 'styles/*'
 
 
+
+#page
+  padding 2.5rem 0 0 5rem
+
 h1
   margin 0
   color #111
@@ -45,10 +49,16 @@ button
   width 600px
 
 
-.spacer 
+.h 
   width 50px
   display inline-block
-  text-align center
+
+
+.v 
+  height 30px
+
+pre 
+  font-size 1.5rem
 
 
 //  ---  animations   ---
