make use of screen

--- a/src/main.styl
+++ b/src/main.styl
@@ -9,12 +9,14 @@
 
 h1
   margin 0
+  margin-bottom 0.5rem
   color #111
   font-size 2rem
   font-family Merriweather
 
 p
   color #111
+  margin-bottom 1.5rem
 
 a
   color $g9
